fix hero and footer misalign problem

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -27,9 +27,12 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height:600px;
+  position:absolute;
+  height:100%;
+  width:100%;
   box-shadow: 0px 3px 8px #2a2a2a;
-  margin-bottom:-100px;
+  margin-bottom:-110px;
+  z-index:-99;
 }
 
 h1, h2, h3, h4, h5, h6, .navbar {
